gobmkida/c1/compute_primary_domains
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_primary_domains/src/engine/optics.c:898:7: error: use of undeclared identifier 'byte_9AA88D'
v22 = byte_9AA88D[v19]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_primary_domains/src/obj/1/optics.o] Error 1
